--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="UTF-8">
     <title>Aixiaoji-Useless-Code-Open-Source-Team</title>
 </head>
+
 <body>
     <h1>Aixiaoji-Useless-Code-Open-Source-Team</h1>
-    <p><strong>为何成立？</strong></p>
-    <p>因为写无用的、滑稽的、屎山代码真的是太草辣。</p>
 
-    <p><strong>我们的项目</strong></p>
+    <h2>为何成立？</h2>
+    <p>我们成立Aixiaoji-Useless-Code-Open-Source-Team，是因为我们相信创造全是无用的、滑稽的、屎山代码的世界可以给编程社区带来乐趣与轻松。</p>
+
+    <h2>我们的项目</h2>
+    <p>目前，我们团队有两个项目：</p>
     <ul>
         <li>是否星期四 - 软件，用于判断今天是不是星期四。</li>
-        <li>Useleode - 编程语言，只有exit的编程语言。</li>
+        <li>Useleode - 编程语言，只有一个指令exit。</li>
     </ul>
 
-    <p><strong>我们的使命</strong></p>
-    <p>创造全是无用的、滑稽的、屎山代码的世界。</p>
+    <h2>我们的使命</h2>
+    <p>我们的使命是创造全是无用的、滑稽的、屎山代码的世界，为编程社区带来不同寻常的编程体验。</p>
 
-    <p><strong>UCOS许可证介绍页：</strong><a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/ucosl">Aixiaoji-Useless-Code-Open-Source-Team.github.io/ucosl</a></p>
+    <h2>UCOS许可证介绍页</h2>
+    <p>我们的许可证是UCOS许可证（Useless Code Open Source License）。请访问：<a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/ucosl">UCOS许可证介绍页</a>，了解更多关于我们的许可证的信息。</p>
 
-    <p><strong>Aixiaoji-Useless-Code-Open-Source-Team GitHub链接：</strong><a href="https://github.com/Aixiaoji-Useless-Code-Open-Source-Team/">https://github.com/Aixiaoji-Useless-Code-Open-Source-Team/</a></p>
+    <h2>Aixiaoji-Useless-Code-Open-Source-Team GitHub链接</h2>
+    <p>要浏览我们团队的GitHub页面，请点击链接：<a href="http://github.com/Aixiaoji-Useless-Code-Open-Source-Team/">Aixiaoji-Useless-Code-Open-Source-Team GitHub</a>。</p>
 
-    <p><strong>README.md版本：</strong><a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/README.md">Aixiaoji-Useless-Code-Open-Source-Team.github.io/README.md</a></p>
+    <h2>README.md版本</h2>
+    <p>您可以查看我们的README.md版本，请访问：<a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/README.md">README.md版本</a>。</p>
 </body>
+
 </html>
