--- a/ucosl/index.html
+++ b/ucosl/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>Aixiaoji-Useless-Code-Open-Source-Team - UCOS许可证</title>
+  <title>Aixiaoji-Useless-Code-Open-Source-Team - UCOS许可证介绍页</title>
 </head>
-
 <body>
-    <h1>Aixiaoji-Useless-Code-Open-Source-Team - UCOS许可证</h1>
+  <h1>Aixiaoji-Useless-Code-Open-Source-Team - UCOS许可证介绍页</h1>
+  <h2>概括</h2>
+  <p>UCOS许可证（UCOS License）是一个滑稽的开源软件许可证，用于规定使用无用的、滑稽的或者屎山代码（在编写代码的过程中无意创造出来的或者有意）的开源软件。</p>
+  <h2>许可证原文</h2>
+  <p>UCOS许可证（版本1.1）：</p>
+  <pre>
+    UCOS许可证
 
-    <h2>概括</h2>
-    <p>UCOS许可证（Useless Code Open Source License）是一个滑稽的开源软件许可证，用于规定使用无用的、滑稽的或者屎山代码（在编写代码的过程中无意创造出来的或者有意）的开源软件。使用本许可证的开源软件必须为无用的、滑稽的或者屎山代码。</p>
-
-    <h2>许可证原文</h2>
-    <p>请查看完整的UCOS许可证原文：</p>
-    <p>UCOS许可证</p>
-    <pre>
 版本：1.1
 
 首先，UCOS许可证（以下简称“本许可证”）是一个滑稽的开源软件许可证，用于规定使用无用的、滑稽的或者屎山代码（在编写代码的过程中无意创造出来的或者有意）的开源软件。使用本许可证的开源软件必须符合以下条款：
@@ -49,7 +45,6 @@
 如有任何问题，请联系：yangborui@aixiaoji.tk
 
 编写UCOS许可证的团队：Aixiaoji-Useless-Code-Open-Source-Team（AUCOST）（没用的代码开源团队（附属Aixiaoji Team））
-    </pre>
+  </pre>
 </body>
-
 </html>
