--- a/index.html
+++ b/index.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>Aixiaoji-Useless-Code-Open-Source-Team</title>
+  <title>Aixiaoji-Useless-Code-Open-Source-Team</title>
 </head>
-
 <body>
-    <h1>Aixiaoji-Useless-Code-Open-Source-Team</h1>
-
-    <h2>为何成立？</h2>
-    <p>我们成立Aixiaoji-Useless-Code-Open-Source-Team，是因为我们相信创造全是无用的、滑稽的、屎山代码的世界可以给编程社区带来乐趣与轻松。</p>
-
-    <h2>我们的项目</h2>
-    <p>目前，我们团队有两个项目：</p>
-    <ul>
-        <li>是否星期四 - 软件，用于判断今天是不是星期四。</li>
-        <li>Useleode - 编程语言，只有一个指令exit。</li>
-    </ul>
-
-    <h2>我们的使命</h2>
-    <p>我们的使命是创造全是无用的、滑稽的、屎山代码的世界，为编程社区带来不同寻常的编程体验。</p>
-
-    <h2>UCOS许可证介绍页</h2>
-    <p>我们的许可证是UCOS许可证（Useless Code Open Source License）。请访问：<a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/ucosl">UCOS许可证介绍页</a>，了解更多关于我们的许可证的信息。</p>
-
-    <h2>Aixiaoji-Useless-Code-Open-Source-Team GitHub链接</h2>
-    <p>要浏览我们团队的GitHub页面，请点击链接：<a href="http://github.com/Aixiaoji-Useless-Code-Open-Source-Team/">Aixiaoji-Useless-Code-Open-Source-Team GitHub</a>。</p>
-
-    <h2>README.md版本</h2>
-    <p>您可以查看我们的README.md版本，请访问：<a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/README.md">README.md版本</a>。</p>
+  <h1>Aixiaoji-Useless-Code-Open-Source-Team</h1>
+  <p>为何成立：因为写无用的、滑稽的、屎山代码真的是太草辣</p>
+  <h2>我们的项目</h2>
+  <ul>
+    <li>是否星期四 - 软件，判断今天是不是星期四</li>
+    <li>Useleode - 解释器，改变妈妈省的终极解释器</li>
+  </ul>
+  <h2>我们的使命</h2>
+  <p>创造全是无用的、滑稽的、屎山代码的世界</p>
+  <h2>UCOS许可证介绍页：</h2>
+  <p><a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/ucosl">Aixiaoji-Useless-Code-Open-Source-Team.github.io/ucosl</a></p>
+  <h2>Aixiaoji-Useless-Code-Open-Source-Team GitHub链接</h2>
+  <p><a href="https://github.com/Aixiaoji-Useless-Code-Open-Source-Team/">https://github.com/Aixiaoji-Useless-Code-Open-Source-Team/</a></p>
+  <h2>README.md版本：</h2>
+  <p><a href="http://Aixiaoji-Useless-Code-Open-Source-Team.github.io/README.md">Aixiaoji-Useless-Code-Open-Source-Team.github.io/README.md</a></p>
 </body>
-
 </html>
