--- a/Uselelan/index.html
+++ b/Uselelan/index.html
@@ -103,5 +103,10 @@ Uselelan解释器正在解释执行...但它什么也做不了！</code></pre>
     <h2>许可证</h2>
     <p>详细的许可证条款请查阅<a href="https://aixiaoji-useless-code-open-source-team.github.io/ucosl/">UCOS许可证</a>。</p>
     <p>感谢您使用Uselelan（UL）解释器，希望这个项目带给您无尽的娱乐和滑稽！</p>
+
+    <!-- 添加开源链接 -->
+    <h2>开源项目</h2>
+    <p>您可以在下面的链接中找到Uselelan（UL）解释器的开源项目：</p>
+    <p><a href="https://github.com/Aixiaoji-Useless-Code-Open-Source-Team/Uselelan">https://github.com/Aixiaoji-Useless-Code-Open-Source-Team/Uselelan</a></p>
 </body>
 </html>
